--- a/src/components/Docs/Docs.scss
+++ b/src/components/Docs/Docs.scss
@@ -32,7 +32,8 @@
   font-size: 18px;
   margin: 1rem;
   gap: 1rem;
-  max-width: 300px;
+  min-width: 300px;
+  max-width: 400px;
   font-family: 'Ysabeau', sans-serif;
   position: relative;
 
