feat: add history

--- a/src/components/Docs/Docs.scss
+++ b/src/components/Docs/Docs.scss
@@ -43,9 +43,17 @@
 }
 
 .docs-header {
+  display: flex;
+  align-items: flex-end;
+  justify-content: space-between;
+
   &__title {
     font-size: 32px;
     font-weight: 600;
+  }
+
+  &__back {
+    cursor: pointer;
   }
 }
 
