--- a/src/components/Editor/MirrorAreaMain/MirrorAreaMain.scss
+++ b/src/components/Editor/MirrorAreaMain/MirrorAreaMain.scss
@@ -1,31 +1,35 @@
 .editor__mirror {
-  padding: 25px 35px;
+  padding: 25px 55px;
   position: absolute;
-  left: 5%;
-  top: 5%;
-  box-shadow: inset 0px 0px 3px 3px black;
+  top: 0;
+  left: 0;
   background-color: rgb(176, 156, 156);
-  width: 400px;
-  height: 600px;
+  width: 100%;
+  height: 1200px;
   white-space: pre;
+  text-shadow: 0px 1px 1px black;
 
   &-item {
     position: relative;
-    height: 18px;
+    height: 28px;
   }
   &-item-index {
     position: absolute;
-    left: -10px;
+    left: -40px;
     top: 0;
+    display: inline-block;
+    width: 35px;
+    text-align: end;
+    background-color: rgba(204, 190, 190);
   }
 }
 
 .editor__mirror-word {
-  color: green;
+  color: rgb(14, 98, 14);
 }
 
 .editor__mirror-req {
-  color: brown;
+  color: rgb(7, 7, 126);
 }
 
 .editor__mirror-inline {
@@ -33,9 +37,13 @@
 }
 
 .editor__mirror-main {
-  color: pink;
+  color: rgb(176, 38, 144);
 }
 
 .editor__mirror-bracket {
-  color: blue;
+  color: rgb(103, 77, 77);
+}
+
+.editor__mirror-error {
+  color: rgb(172, 12, 12);
 }
