--- a/src/components/Editor/TextArea/TextArea.scss
+++ b/src/components/Editor/TextArea/TextArea.scss
@@ -1,15 +1,17 @@
+.editor__variables,
 .editor__area {
-  padding: 25px 35px;
+  padding: 25px 55px;
   position: absolute;
-  left: 5%;
-  top: 5%;
+  letter-spacing: 1px;
+  top: 0;
+  left: 0;
   resize: none;
   border-radius: 8px;
   background-color: inherit;
   line-height: 1;
-  font-size: 18px;
-  width: 400px;
-  height: 600px;
+  font-size: 28px;
+  width: 100%;
+  height: 1200px;
   color: transparent;
   caret-color: black;
 }
