--- a/src/components/Docs/Docs.scss
+++ b/src/components/Docs/Docs.scss
@@ -32,13 +32,13 @@
   font-size: 18px;
   margin: 1rem;
   gap: 1rem;
-  min-width: 300px;
-  max-width: 400px;
+  width: 300px;
   font-family: 'Ysabeau', sans-serif;
   position: relative;
 
   &.closed {
-    left: -100%;
+    // left: -100%;
+    display: none;
   }
 }
 
@@ -54,6 +54,11 @@
 
   &__back {
     cursor: pointer;
+    transition: .4s;
+    
+    &:hover {
+      transform: scale(1.1);
+    }
   }
 }
 
@@ -82,6 +87,7 @@
 
     &:hover {
       background-color: rgb(118, 168, 255);
+      transform: scale(1.03);
     }
     
     &:hover .field-name,
@@ -102,6 +108,7 @@
 
     &:hover {
       background-color: rgb(118, 168, 255);
+      transform: scale(1.03);
     }
 
     &:hover .field-name,
