--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,3 +1,56 @@
-.header a {
-  margin: 10px;
+@import url('https://fonts.googleapis.com/css2?family=Yanone+Kaffeesatz:wght@400;700&display=swap%27');
+
+.header {
+  font-family: "Yanone Kaffeesatz";
+  position: sticky;
+  left: 0;
+  background-color: rgb(0, 0, 0);
+  box-shadow: none;
+  height: 50px;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  gap: 20px;
+  text-shadow: 2px 2px 2px black;
+  font-size: 24px;
+  padding: 0 20px;
+  width: 100%;
+  height: 60px;
+  z-index: 3;
+  left: 0;
+  top: 0;
+  color: white;
+  transition: .2s;
+
+  &.scrolled {
+    background-color: rgb(69, 69, 69);
+    transition: .2s;
+
+    .header__actions {
+      gap: 10px;
+      transition: .2s;
+    }
+  }
+
+  &__actions {
+    display: flex;
+    gap: 20px;
+    transition: .2s;
+  }
+
+  .button {
+    background-color: transparent;
+    color: #fff;
+    padding: 7px 20px;
+    border: 2px solid #fff;
+    border-radius: 4px;
+    font-size: 16px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+
+    &:hover {
+      background-color: #fff;
+      color: #000;
+    }
+  }
 }
