--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -2,7 +2,6 @@
 .header {
   font-family: "Yanone Kaffeesatz";
   position: sticky;
-  left: 0;
   background-color: rgb(0, 0, 0);
   box-shadow: none;
   height: 50px;
@@ -20,6 +19,7 @@
   top: 0;
   color: white;
   transition: .2s;
+  margin-bottom: 10px;
 
   &.scrolled {
     background-color: rgb(69, 69, 69);
