--- a/src/components/UrlInput/UrlInput.scss
+++ b/src/components/UrlInput/UrlInput.scss
@@ -1,6 +1,6 @@
 .url-input {
   font-family: "Yanone Kaffeesatz";
-  margin: 20px;
+  margin: 10px 0;
   input {
     padding: 8px;
     border: 1px solid #ccc;
