--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -2,6 +2,7 @@
 .header {
   font-family: "Yanone Kaffeesatz";
   position: sticky;
+  z-index: 5173;
   background-color: rgb(0, 0, 0);
   box-shadow: none;
   height: 50px;
