--- a/src/components/Editor/Editor.scss
+++ b/src/components/Editor/Editor.scss
@@ -1,12 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Yanone+Kaffeesatz:wght@400;700&display=swap');
-//"Yanone Kaffeesatz"
 
 .editor {
   font-family: 'Yanone Kaffeesatz';
   border-radius: 8px;
   letter-spacing: 1px;
-  overflow: hidden;
   font-size: 28px;
+  overflow: hidden;
   position: relative;
   display: flex;
   width: 400px;
@@ -16,8 +15,9 @@
 }
 
 .editor__main-container {
+  border-radius: 8px;
   overflow: auto;
-  position: relative;
+  position: absolute;
   width: 100%;
   height: 100%;
 
@@ -34,6 +34,7 @@
 }
 
 .editor__variables-container {
+  border-radius: 0px 0px 8px 8px;
   overflow: auto;
   position: relative;
   width: 400px;
@@ -93,7 +94,7 @@
     transform: scale(1);
   }
   50% {
-    transform: scale(1.3);
+    transform: scale(1.2);
   }
   100% {
     transform: scale(1);
