--- a/src/components/Docs/Docs.scss
+++ b/src/components/Docs/Docs.scss
@@ -27,13 +27,18 @@
 }
 
 .graphql-docs {
+  background-color: rgb(176, 156, 156);
   display: flex;
   flex-direction: column;
-  font-size: 18px;
+  font-size: 22px;
   margin: 1rem;
   gap: 1rem;
   width: 300px;
-  font-family: 'Ysabeau', sans-serif;
+  height: 100%;
+  border-radius: 8px;
+  padding: 5px;
+  box-shadow: 0px 0px 2px 2px black;
+  font-family: 'Yanone Kaffeesatz';
   position: relative;
 
   &.closed {
