--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -4,5 +4,5 @@
   min-height: 100vh;
   display: flex;
   flex-direction: column;
-  background-color: #c4deff;
+  background-color: rgb(234, 223, 223);
 }
