--- a/src/components/CopyButton/CopyButton.scss
+++ b/src/components/CopyButton/CopyButton.scss
@@ -11,6 +11,11 @@
   justify-content: center;
   align-items: center;
   transition: all 0.3s;
+  @media (max-width: 600px) {
+    width: 40px;
+    height: 40px;
+    top: 11%;
+  }
   &:hover {
     transform: scale(1.05);
     background-color: rgba(204, 190, 190, 1);
@@ -22,6 +27,10 @@
     position: relative;
     width: 28px;
     height: 28px;
+    @media (max-width: 600px) {
+      width: 20px;
+      height: 20px;
+    }
     & img {
       position: absolute;
       top: 0;
@@ -44,6 +53,9 @@
     z-index: 20;
     top: 120%;
     right: 0;
+    @media (max-width: 600px) {
+      font-size: 14px;
+    }
     &:before {
       content: '';
       position: absolute;
