--- a/src/components/Docs/Docs.scss
+++ b/src/components/Docs/Docs.scss
@@ -1,5 +1,4 @@
 @import url('https://fonts.googleapis.com/css2?family=Ysabeau:wght@300;400;500;600;700&display=swap');
-
 .docs-code {
   font-family: 'Source Code Pro', monospace;
   border-radius: 2px;
@@ -29,14 +28,12 @@
 .graphql-docs {
   background-color: rgb(176, 156, 156);
   display: flex;
+  flex-grow: 1;
   flex-direction: column;
   font-size: 22px;
-  margin: 1rem;
   gap: 1rem;
-  width: 300px;
-  height: 100%;
   border-radius: 8px;
-  padding: 5px;
+  padding: 10px;
   box-shadow: 0px 0px 2px 2px black;
   font-family: 'Yanone Kaffeesatz';
   position: relative;
@@ -58,8 +55,8 @@
 
   &__back {
     cursor: pointer;
-    transition: .4s;
-    
+    transition: 0.4s;
+
     &:hover {
       transform: scale(1.1);
     }
@@ -87,13 +84,13 @@
     position: relative;
     padding: 0.5rem;
     cursor: pointer;
-    transition: .1s;
+    transition: 0.1s;
 
     &:hover {
       background-color: rgb(118, 168, 255);
       transform: scale(1.03);
     }
-    
+
     &:hover .field-name,
     &:hover .type-name {
       color: white;
@@ -107,7 +104,7 @@
 
   &__arg {
     padding: 0.5rem;
-    transition: .1s;
+    transition: 0.1s;
     cursor: pointer;
     position: relative;
 
