--- a/src/components/Editor/Editor.scss
+++ b/src/components/Editor/Editor.scss
@@ -1,18 +1,22 @@
 @import url('https://fonts.googleapis.com/css2?family=Yanone+Kaffeesatz:wght@400;700&display=swap');
-
 .editor {
   font-family: 'Yanone Kaffeesatz';
   border-radius: 8px;
   letter-spacing: 1px;
-  font-size: 28px;
+  font-size: 24px;
   overflow: hidden;
   position: relative;
-  display: flex;
-  width: 400px;
-  height: 600px;
+  flex: 1 1 auto;
+  min-width: 400px;
+  min-height: 600px;
   flex-direction: column;
   box-shadow: 0px 0px 2px 2px black;
-  margin-bottom: 10px;
+  @media (max-width: 600px) {
+    font-size: 18px;
+  }
+  @media (max-width: 500px) {
+    min-width: 290px;
+  }
 }
 
 .editor__main-container {
@@ -38,8 +42,8 @@
   border-radius: 0px 0px 8px 8px;
   overflow: auto;
   position: relative;
-  width: 400px;
-  height: 180px;
+  width: 100%;
+  height: 222px;
   &::-webkit-scrollbar {
     width: 0px;
     background-color: rgb(147, 135, 135);
@@ -55,6 +59,7 @@
 .editor__sidebar {
   display: flex;
   position: absolute;
+  width: 100%;
   bottom: -31%;
   transition: all 0.5s;
 }
@@ -115,6 +120,9 @@
   padding: 10px;
   font-size: 24px;
   width: 100px;
+  @media (max-width: 600px) {
+    font-size: 18px;
+  }
   &:hover {
     transform: scale(1.08);
   }
@@ -137,7 +145,7 @@
   padding: 10px;
   width: 100%;
   z-index: 10;
-  top: -70px;
+  top: -30px;
   left: 0;
 
   &::after {
