--- a/src/components/Editor/MirrorAreaVariables/MirrorAreaVariables.scss
+++ b/src/components/Editor/MirrorAreaVariables/MirrorAreaVariables.scss
@@ -1,5 +1,5 @@
 .editor__mirror-variables {
-  padding: 25px 55px;
+  padding: 55px 20px 55px 55px;
   position: absolute;
   letter-spacing: 1px;
   background-color: rgb(91, 78, 78);
