--- a/src/components/Editor/TextArea/TextArea.scss
+++ b/src/components/Editor/TextArea/TextArea.scss
@@ -1,6 +1,6 @@
 .editor__variables,
 .editor__area {
-  padding: 25px 55px;
+  padding: 55px 20px 55px 55px;
   position: absolute;
   letter-spacing: 1px;
   top: 0;
@@ -9,11 +9,14 @@
   border-radius: 8px;
   background-color: inherit;
   line-height: 1;
-  font-size: 28px;
+  font-size: 24px;
   width: 100%;
   height: 1200px;
   color: transparent;
   caret-color: black;
+  @media (max-width: 800px) {
+    font-size: 18px;
+  }
 }
 
 .asd {
