--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -3,15 +3,19 @@
   justify-content: space-between;
   align-items: center;
   padding: 0 20px;
+  gap: 20px;
   width: 100%;
   height: 65px;
   color: white;
   background-color: rgb(69, 69, 69);
 }
 
+.footer-git {
+  display: flex;
+  gap: 10px;
+}
 .footer-git-person {
   display: inline-flex;
-  margin: 0 15px;
   border-radius: 50%;
   box-shadow: 0px 2px 2px 2px black;
   background-size: cover;
