--- a/src/pages/Main/Main.scss
+++ b/src/pages/Main/Main.scss
@@ -1,5 +1,8 @@
 .graphql-container {
-  margin-top: 10px;
+  padding: 15px;
   display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 15px;
   flex-grow: 1;
 }
