--- a/src/components/Docs/Docs.scss
+++ b/src/components/Docs/Docs.scss
@@ -59,9 +59,15 @@
   &__back {
     cursor: pointer;
     transition: .4s;
+    margin: 3px;
+    padding: 5px;
+    border-radius: 5px;
+    display: flex;
+    align-items: center;
     
     &:hover {
       transform: scale(1.1);
+      background-color: rgba(204, 190, 190, 0.7);
     }
   }
 }
@@ -90,7 +96,7 @@
     transition: .1s;
 
     &:hover {
-      background-color: rgb(118, 168, 255);
+      background-color: #8d7c7c;
       transform: scale(1.03);
     }
     
@@ -112,7 +118,7 @@
     position: relative;
 
     &:hover {
-      background-color: rgb(118, 168, 255);
+      background-color: #8d7c7c;
       transform: scale(1.03);
     }
 
