--- a/src/pages/Welcome/Welcome.scss
+++ b/src/pages/Welcome/Welcome.scss
@@ -1,7 +1,21 @@
 .welcome-page {
   flex-grow: 1;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: 180px;
+
+  .button {
+    height: 72px;
+    width: 200px;
+    color: #000;
+    border: 2px solid #000;
+    font-size: 20px;
+
+    &:hover {
+      background-color: #000;
+      color: #c4deff;
+    }
+  }
 }
