--- a/src/components/Editor/Editor.scss
+++ b/src/components/Editor/Editor.scss
@@ -6,9 +6,8 @@
   font-size: 24px;
   overflow: hidden;
   position: relative;
-  flex: 1 1 auto;
   min-width: 400px;
-  min-height: 600px;
+  height: 600px;
   flex-direction: column;
   box-shadow: 0px 0px 2px 2px black;
   @media (max-width: 600px) {
@@ -119,7 +118,7 @@
   border-radius: 8px;
   padding: 10px;
   font-size: 24px;
-  width: 100px;
+  width: 115px;
   @media (max-width: 600px) {
     font-size: 18px;
   }
