--- a/src/components/Response/response.scss
+++ b/src/components/Response/response.scss
@@ -1,7 +1,6 @@
 .response {
   flex: 1 1 400px;
-  min-height: 600px;
-
+  height: 800px;
   border-radius: 8px;
   box-shadow: 0px 0px 2px 2px black;
   font-size: 18px;
