--- a/src/pages/Authorization/authorization.scss
+++ b/src/pages/Authorization/authorization.scss
@@ -17,7 +17,7 @@
 
   &__view {
     width: 430px;
-    min-height: 345px;
+    min-height: 325px;
     background: #fff;
     border-radius: 10px;
     padding: 40px 37px;
@@ -29,5 +29,15 @@
     margin-top: 3px;
     color: red;
     font-size: 14px;
+  }
+}
+
+@media (max-width: 450px) {
+  .auth {
+
+    &__view {
+      width: 300px;
+      padding: 20px;
+    }
   }
 }
