--- a/src/components/Docs/Docs.scss
+++ b/src/components/Docs/Docs.scss
@@ -12,11 +12,11 @@
 }
 
 .field-name_red {
-  color: #f25c54;
+  color: #ca4942;
 }
 
 .type-name {
-  color: rgb(245, 160, 0);
+  color: rgb(245, 135, 0);
   margin-left: 5px;
 }
 
@@ -56,7 +56,7 @@
   &__back {
     cursor: pointer;
 
-    transition: .4s;
+    transition: 0.4s;
     margin: 3px;
     padding: 5px;
     border-radius: 5px;
@@ -74,7 +74,7 @@
   &__title {
     margin-bottom: 10px;
     padding-left: 0.5rem;
-    font-size: 24px;
+    font-size: 28px;
     font-weight: 500;
   }
 
@@ -85,6 +85,7 @@
   &__type {
     margin-top: 30px;
     padding: 0.5rem;
+    text-shadow: 0px 1px 1px black;
   }
 
   &__field {
@@ -92,6 +93,7 @@
     padding: 0.5rem;
     cursor: pointer;
     transition: 0.1s;
+    text-shadow: 0px 1px 1px black;
 
     &:hover {
       background-color: #8d7c7c;
@@ -114,6 +116,7 @@
     transition: 0.1s;
     cursor: pointer;
     position: relative;
+    text-shadow: 0px 1px 1px black;
 
     &:hover {
       background-color: #8d7c7c;
