--- a/src/components/Sidebar/Sidebar.scss
+++ b/src/components/Sidebar/Sidebar.scss
@@ -4,6 +4,7 @@
     padding: 0.5rem;
     border-radius: 0.4rem;
     transition: 0.4s;
+    box-shadow: 0px 0px 2px 2px black;
     background-color: rgb(209, 201, 201);
 
     &:hover {
