--- a/src/pages/Authorization/authorization.scss
+++ b/src/pages/Authorization/authorization.scss
@@ -1,12 +1,13 @@
 .auth {
-  background: url('https://cdn.codersociety.com/uploads/graphql-reasons.png') center center/cover no-repeat;
+  background: url('https://cdn.codersociety.com/uploads/graphql-reasons.png') center center/cover
+    no-repeat;
   min-height: calc(100vh - 60px - 65px);
   display: flex;
   justify-content: center;
   align-items: center;
   flex-grow: 1;
 
-  &__container {  
+  &__container {
     max-width: 1280px;
     height: 100%;
     margin: 0 auto;
@@ -18,10 +19,11 @@
   &__view {
     width: 430px;
     min-height: 325px;
-    background: #fff;
-    border-radius: 10px;
+    background: rgb(147, 123, 123, 0.7);
+    border-radius: 12px;
     padding: 40px 37px;
-    filter: drop-shadow(5px 5px 10px rgba(0,0,0,.25));
+    box-shadow: inset 0px 0px 6px 6px rgba(0, 0, 0, 0.8);
+    filter: drop-shadow(5px 5px 10px rgba(0, 0, 0, 0.25));
   }
 
   &__error {
@@ -34,7 +36,6 @@
 
 @media (max-width: 450px) {
   .auth {
-
     &__view {
       width: 300px;
       padding: 20px;
