--- a/src/components/Docs/Docs.scss
+++ b/src/components/Docs/Docs.scss
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Ysabeau:wght@300;400;500;600;700&display=swap');
+
 .docs-code {
   font-family: 'Source Code Pro', monospace;
   border-radius: 2px;
@@ -12,11 +13,11 @@
 }
 
 .field-name_red {
-  color: #ca4942;
+  color: #f25c54;
 }
 
 .type-name {
-  color: rgb(245, 135, 0);
+  color: rgb(245, 160, 0);
   margin-left: 5px;
 }
 
@@ -28,7 +29,6 @@
 .graphql-docs {
   background-color: rgb(176, 156, 156);
   display: flex;
-  flex-grow: 1;
   flex-direction: column;
   font-size: 22px;
   gap: 1rem;
@@ -37,9 +37,14 @@
   box-shadow: 0px 0px 2px 2px black;
   font-family: 'Yanone Kaffeesatz';
   position: relative;
+  width: 300px;
 
   &.closed {
     display: none;
+  }
+
+  @media screen and (max-width: 834px) {
+    width: 100%;
   }
 }
 
@@ -56,7 +61,7 @@
   &__back {
     cursor: pointer;
 
-    transition: 0.4s;
+    transition: .4s;
     margin: 3px;
     padding: 5px;
     border-radius: 5px;
@@ -74,7 +79,7 @@
   &__title {
     margin-bottom: 10px;
     padding-left: 0.5rem;
-    font-size: 28px;
+    font-size: 24px;
     font-weight: 500;
   }
 
@@ -85,15 +90,13 @@
   &__type {
     margin-top: 30px;
     padding: 0.5rem;
-    text-shadow: 0px 1px 1px black;
   }
 
   &__field {
     position: relative;
-    padding: 0.5rem;
+    padding: 0.5rem 2rem 0.5rem 0.5rem;
     cursor: pointer;
     transition: 0.1s;
-    text-shadow: 0px 1px 1px black;
 
     &:hover {
       background-color: #8d7c7c;
@@ -116,7 +119,6 @@
     transition: 0.1s;
     cursor: pointer;
     position: relative;
-    text-shadow: 0px 1px 1px black;
 
     &:hover {
       background-color: #8d7c7c;
