feat: add adaptive for editor

--- a/src/components/UrlInput/UrlInput.scss
+++ b/src/components/UrlInput/UrlInput.scss
@@ -2,7 +2,7 @@
   font-family: 'Roboto', sans-serif;
   position: absolute;
   z-index: 15;
-  top: 13px;
+  top: 2%;
   left: 15px;
   width: 75%;
 
