--- a/src/components/Editor/Editor.scss
+++ b/src/components/Editor/Editor.scss
@@ -8,6 +8,7 @@
   overflow: hidden;
   position: relative;
   min-width: 400px;
+  flex: 1 1 auto;
   height: 800px;
   flex-direction: column;
   box-shadow: 0px 0px 2px 2px black;
@@ -17,24 +18,32 @@
   @media (max-width: 500px) {
     min-width: 290px;
   }
+
+  &__main-wrapper {
+    position: relative;
+  }
+
+  &__variables-wrapper {
+    position: relative;
+  }
 }
 
 .editor__main-container {
-  border-radius: 8px;
+  border-radius: 8px 8px 0px 0px;
   overflow: auto;
-  position: absolute;
+  position: relative;
   width: 100%;
-  height: 100%;
+  height: 734px;
 
   &::-webkit-scrollbar {
-    width: 0px;
+    width: 10px;
     background-color: rgb(147, 135, 135);
   }
   &::-webkit-scrollbar-thumb {
     background-color: rgb(163, 146, 146);
 
     border-radius: 8px;
-    box-shadow: inset 0px 0px 3px 3px black;
+    box-shadow: inset 0px 0px 2px 2px black;
   }
 }
 
@@ -43,15 +52,15 @@
   overflow: auto;
   position: relative;
   width: 100%;
-  height: 222px;
+  height: 250px;
   &::-webkit-scrollbar {
-    width: 0px;
+    width: 10px;
     background-color: rgb(147, 135, 135);
   }
   &::-webkit-scrollbar-thumb {
     background-color: rgb(163, 146, 146);
 
-    border-radius: 8px;
+    border-radius: 10px;
     box-shadow: inset 0px 0px 2px 2px black;
   }
 }
@@ -122,6 +131,7 @@
   width: 115px;
   @media (max-width: 600px) {
     font-size: 18px;
+    width: 95px;
   }
   &:hover {
     transform: scale(1.08);
@@ -145,7 +155,7 @@
   padding: 10px;
   width: 100%;
   z-index: 10;
-  top: -30px;
+  top: 0px;
   left: 0;
 
   &::after {
