--- a/src/components/Editor/MirrorAreaMain/MirrorAreaMain.scss
+++ b/src/components/Editor/MirrorAreaMain/MirrorAreaMain.scss
@@ -5,7 +5,8 @@
   left: 0;
   background-color: rgb(176, 156, 156);
   width: 100%;
-  height: 1200px;
+  // height: 1200px;
+  min-height: 734px;
   white-space: pre;
   text-shadow: 0px 1px 1px black;
 
