--- a/src/components/Editor/MirrorAreaVariables/MirrorAreaVariables.scss
+++ b/src/components/Editor/MirrorAreaVariables/MirrorAreaVariables.scss
@@ -1,11 +1,12 @@
 .editor__mirror-variables {
-  padding: 55px 20px 55px 55px;
-  position: absolute;
+  padding: 80px 20px 55px 55px;
+  position: relative;
   letter-spacing: 1px;
   background-color: rgb(91, 78, 78);
   text-shadow: 0px 1px 1px black;
   width: 100%;
-  height: 1200px;
+  // height: 1200px;
+  min-height: 250px;
   white-space: pre;
 
   &-item {
