--- a/src/components/Editor/TextArea/TextArea.scss
+++ b/src/components/Editor/TextArea/TextArea.scss
@@ -11,10 +11,19 @@
   line-height: 1;
   font-size: 24px;
   width: 100%;
-  height: 1200px;
+  // height: 1200px;
+  // min-height: 550px;
+  height: 100%;
   color: transparent;
   caret-color: black;
   @media (max-width: 800px) {
     font-size: 18px;
   }
+  &::-webkit-scrollbar {
+    display: none;
+  }
+}
+
+.editor__variables {
+  padding-top: 80px;
 }
