--- a/src/components/AuthNav/authNav.scss
+++ b/src/components/AuthNav/authNav.scss
@@ -1,3 +1,16 @@
+.auth {
+  position: relative;
+  &::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgb(15, 14, 14, 0.3);
+  }
+}
+
 .auth-nav {
   margin-bottom: 35px;
 
@@ -9,7 +22,7 @@
     font-size: 18px;
     padding-bottom: 10px;
     cursor: pointer;
-    color: rgba(0, 0, 0, .3);
+    color: rgba(0, 0, 0, 0.3);
 
     &_active {
       color: rgba(0, 0, 0);
