fix: fix adaptive

--- a/src/components/Sidebar/Sidebar.scss
+++ b/src/components/Sidebar/Sidebar.scss
@@ -6,6 +6,7 @@
     transition: 0.4s;
     box-shadow: 0px 0px 2px 2px black;
     background-color: rgb(209, 201, 201);
+    width: 58px;
 
     &:hover {
       background-color: rgb(197, 183, 183);
